--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,10 @@
     "gulp-concat": "~2.6.0",
     "run-sequence": "~1.1.5",
     "gulp-uglify": "~1.5.1",
-    "uglify-js": "~2.6.1"
+    "gulp-if": "~2.0.0",
+    "jshint": "~2.9.1",
+    "gulp-plumber": "~1.1.0",
+    "yargs": "~4.2.0",
+    "gulp-js-obfuscator": "~1.0.0"
   }
 }
