--- a/conf/supervisord.conf
+++ b/conf/supervisord.conf
@@ -7,13 +7,12 @@
 ; variables can be expanded using this syntax: "%(ENV_HOME)s".
 
 [unix_http_server]
-;file=/var/run/solar/supervisor.sock   ; (the path to the socket file)
-file=/tmp/supervisor.sock   ; (the path to the socket file)
+;file=/tmp/supervisor.sock   ; (the path to the socket file)
 ;file=/var/run/supervisor.sock   ; (the path to the socket file)
 ;chmod=0700                 ; socket file mode (default 0700)
-;chown=root:root       ; socket file uid:gid owner
-;username=chris              ; (default is no username (open server))
-;password=123               ; (default is no password (open server))
+;chown=wayne:wayne       ; socket file uid:gid owner
+;username=wayne              ; (default is no username (open server))
+;password=watdapak               ; (default is no password (open server))
 
 ;[inet_http_server]         ; inet (TCP) server disabled by default
 ;port=127.0.0.1:9001        ; (ip_address:port specifier, *:port for all iface)
@@ -25,10 +24,10 @@ logfile=/var/www/solar/logs/supervisord.log ; (main log file;default $CWD/superv
 logfile_maxbytes=50MB        ; (max main logfile bytes b4 rotation;default 50MB)
 logfile_backups=10           ; (num of main logfile rotation backups;default 10)
 loglevel=info                ; (log level;default info; others: debug,warn,trace)
-pidfile=/var/www/solar/logs/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
-nodaemon=false               ; (start in foreground if true;default false)
-minfds=1024                  ; (min. avail startup file descriptors;default 1024)
-minprocs=200                 ; (min. avail process descriptors;default 200)
+;pidfile=/var/www/solar/logs/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
+;nodaemon=false               ; (start in foreground if true;default false)
+;minfds=1024                  ; (min. avail startup file descriptors;default 1024)
+;minprocs=200                 ; (min. avail process descriptors;default 200)
 ;umask=022                   ; (process file creation umask;default 022)
 ;user=chrism                 ; (default is current user, required if root)
 ;identifier=supervisor       ; (supervisord identifier, default is 'supervisor')
@@ -41,12 +40,11 @@ minprocs=200                 ; (min. avail process descriptors;default 200)
 ; the below section must remain in the config file for RPC
 ; (supervisorctl/web interface) to work, additional interfaces may be
 ; added by defining them in separate rpcinterface: sections
-[rpcinterface:supervisor]
-supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+;[rpcinterface:supervisor]
+;supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
-;serverurl=unix:///var/run/solar/supervisor.sock ; use a unix:// URL  for a unix socket
-serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
+;serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 ;serverurl=unix:///var/run/supervisor.sock ; use a unix:// URL  for a unix socket
 ;serverurl=http://127.0.0.1:9001 ; use an http:// url to specify an inet socket
 ;username=chris              ; should be same as http_username if set
@@ -64,7 +62,7 @@ directory=/var/www/solar
 user=root
 autostart=true
 autorestart=true
-redirect_stderr=true
+redirect_stderr=True
 stdout_logfile=/var/www/solar/logs/stdout.log
 stderr_logfile=/var/www/solar/logs/stderr.log
 
